fixing page spacing issue

--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ html, body {
     line-height: 1.6;
     color: #250601;
     background: #f2f0ed;
-    min-height: 100vh;
+    min-height: auto; /* 자동 페이지 길이 정렬 */
 }
 
 /* 이미지 확대/드래그/길게누르기 방지 */
@@ -63,7 +63,7 @@ body, img, div, section {
 
 /* 페이지 공통 스타일 */
 .page {
-    min-height: 100vh;
+    min-height: auto;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -112,7 +112,6 @@ body, img, div, section {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    min-height: 115vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -185,7 +184,7 @@ body, img, div, section {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 400px; /* 글자 위치 조정 */
+    height: 300px; /* 글자 위치 조정 */
     opacity: 0;
     transform: translateY(20px);
     transition: opacity 0.8s ease, transform 0.8s ease;
@@ -521,7 +520,7 @@ body, img, div, section {
 
 .route-btn {
     display: inline-block;
-    padding: 6px 12px;
+    padding: 6px 8px;
     border: 1px solid #000;
     background: #fff;
     color: #000000;
